--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,4 @@ jobs:
               awscli
       run:
           name: Build Docker images
-          command: docker-compose -f docker-compose-review.yml build
+          command: docker-compose -f docker-compose.yml build
