--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,6 @@ jobs:
             pip install \
               docker-compose \
               awscli
-      run:
+      - run:
           name: Build Docker images
           command: docker-compose -f docker-compose.yml build
