--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,5 @@ jobs:
       - run:
           name: Deploy
           command: |
-            pip install -r /ecs/requirements.txt
+            pip install -r ecs/requirements.txt
             python ecs/scripts/setup.js
