--- a/devops/config/identitiesadapter-template.yaml
+++ b/devops/config/identitiesadapter-template.yaml
@@ -121,7 +121,7 @@ spec:
           - name: apigee_management_endpoint
             value: https://api.enterprise.apigee.com/v1/organizations/denseidel-trial
           - name: apigee_auth_endpoint
-            value: https://api.enterprise.apigee.com/v1/organizations/denseidel-trial
+            value: https://login.apigee.com/oauth/token
           - name: MONGODB_URL
             valueFrom:
               secretKeyRef:
